--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["json-schema-for-humans==1.3.3"]
+
+[tool.ruff]
